fix: KPI.ipynb to match KPI.py

--- a/KPI.ipynb
+++ b/KPI.ipynb
@@ -12,7 +12,8 @@
         "import datetime\n",
         "import logging\n",
         "import argparse\n",
-        "import json"
+        "import json\n",
+        "from pprint import pprint"
       ]
     },
     {
@@ -76,7 +77,7 @@
         "    print(f\"エラー: ファイル '{purchase_file}' が見つかりません。\")\n",
         "    purchase_df = None\n",
         "except Exception as e:\n",
-        "    printr(f\"エラー: '{purchase_file}' の読み込み中に予期しないエラーが発生しました: {e}\")\n",
+        "    print(f\"エラー: '{purchase_file}' の読み込み中に予期しないエラーが発生しました: {e}\")\n",
         "    purchase_df = None\n",
         "\n",
         "try:\n",
@@ -239,7 +240,7 @@
         "}\n",
         "\n",
         "print(\"\\n--- 分析結果 ---\")\n",
-        "print(json.dumps(results, indent=4, ensure_ascii=False))\n",
+        "pprint(results)\n",
         "print(\"データ分析を完了しました。\")"
       ]
     }
