--- a/KPI.ipynb
+++ b/KPI.ipynb
@@ -33,9 +33,9 @@
       },
       "outputs": [],
       "source": [
-        "customer_file = 'customer_data.csv'\n",
-        "purchase_file = 'purchase_data.csv'\n",
-        "sales_file = 'sales_data.csv'\n",
+        "customer_file = 'data/customer_data.csv'\n",
+        "purchase_file = 'data/purchase_data.csv'\n",
+        "sales_file = 'data/sales_data.csv'\n",
         "start_date_str = '2024-01-01'\n",
         "end_date_str = '2024-12-31'\n",
         "\n",
@@ -250,11 +250,13 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.13.2"
     }
   },
   "nbformat": 4,
