--- a/KPI.ipynb
+++ b/KPI.ipynb
@@ -29,7 +29,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "X1pBqrYkX_eb"
+        "id": "X1pBqrYkX_eb",
+        "tags": [
+          "parameters"
+        ]
       },
       "outputs": [],
       "source": [
@@ -37,8 +40,15 @@
         "purchase_file = 'data/purchase_data.csv'\n",
         "sales_file = 'data/sales_data.csv'\n",
         "start_date_str = '2025-01-01'\n",
-        "end_date_str = '2025-12-31'\n",
-        "\n",
+        "end_date_str = '2025-12-31'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "start_date = pd.to_datetime(start_date_str).date() if start_date_str else None\n",
         "end_date = pd.to_datetime(end_date_str).date() if end_date_str else None"
       ]
