--- a/KPI.ipynb
+++ b/KPI.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "updhLCBpXCcx"
       },
@@ -12,7 +12,8 @@
         "import datetime\n",
         "import logging\n",
         "import argparse\n",
-        "import json"
+        "import json\n",
+        "from pprint import pprint"
       ]
     },
     {
@@ -26,17 +27,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "X1pBqrYkX_eb"
       },
       "outputs": [],
       "source": [
-        "customer_file = 'customer_data.csv'\n",
-        "purchase_file = 'purchase_data.csv'\n",
-        "sales_file = 'sales_data.csv'\n",
-        "start_date_str = '2024-01-01'\n",
-        "end_date_str = '2024-12-31'\n",
+        "customer_file = 'data/customer_data.csv'\n",
+        "purchase_file = 'data/purchase_data.csv'\n",
+        "sales_file = 'data/sales_data.csv'\n",
+        "start_date_str = '2025-01-01'\n",
+        "end_date_str = '2025-12-31'\n",
         "\n",
         "start_date = pd.to_datetime(start_date_str).date() if start_date_str else None\n",
         "end_date = pd.to_datetime(end_date_str).date() if end_date_str else None"
@@ -53,11 +54,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "p08Xiq_tYMRc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "'data/customer_data.csv' を読み込みました。\n",
+            "'data/purchase_data.csv' を読み込みました。\n",
+            "'data/sales_data.csv' を読み込みました。\n"
+          ]
+        }
+      ],
       "source": [
         "try:\n",
         "    customer_df = pd.read_csv(customer_file)\n",
@@ -76,7 +87,7 @@
         "    print(f\"エラー: ファイル '{purchase_file}' が見つかりません。\")\n",
         "    purchase_df = None\n",
         "except Exception as e:\n",
-        "    printr(f\"エラー: '{purchase_file}' の読み込み中に予期しないエラーが発生しました: {e}\")\n",
+        "    print(f\"エラー: '{purchase_file}' の読み込み中に予期しないエラーが発生しました: {e}\")\n",
         "    purchase_df = None\n",
         "\n",
         "try:\n",
@@ -101,11 +112,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "jhPv1FMeYX7_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "売上KPIを算出します。\n"
+          ]
+        }
+      ],
       "source": [
         "sales_kpis = {}\n",
         "if sales_df is not None and not sales_df.empty:\n",
@@ -146,11 +165,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "3tWdyo8wYhUj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "顧客KPIを算出します。\n"
+          ]
+        }
+      ],
       "source": [
         "customer_kpis = {}\n",
         "if customer_df is not None and not customer_df.empty and sales_df is not None and not sales_df.empty and 'customer_id' in sales_df.columns and 'sales_date' in sales_df.columns:\n",
@@ -184,11 +211,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "pBgIdiiAYq4f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "仕入れKPIを算出します。\n"
+          ]
+        }
+      ],
       "source": [
         "purchase_kpis = {}\n",
         "if purchase_df is not None and not purchase_df.empty:\n",
@@ -203,7 +238,7 @@
         "            df_purchase = df_purchase[df_purchase['purchase_date'] <= end_date]\n",
         "\n",
         "        total_purchase_amount = (df_purchase['quantity'] * df_purchase['unit_price']).sum()\n",
-        "        product_purchase_amount = df_purchase.groupby('item_name')[['quantity', 'unit_price']].apply(lambda x: (x['quantity'] * x['unit_price']).sum()).sort_values(ascending=False).to_dict()\n",
+        "        product_purchase_amount = df_purchase.groupby('item_name')[['quantity', 'unit_price']].apply(lambda x: (x['quantity'] * x['unit_price']).sum()).to_dict()\n",
         "\n",
         "        purchase_kpis = {\n",
         "            \"total_purchase_amount\": total_purchase_amount,\n",
@@ -226,11 +261,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "jUaAObEDYyQi"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "--- 分析結果 ---\n",
+            "{'customer_kpis': {'average_purchase_frequency': np.float64(1.0),\n",
+            "                   'repeat_customers': np.int64(0)},\n",
+            " 'purchase_kpis': {'product_purchase_amount': {'みかん': 3600.0,\n",
+            "                                               'りんご': 5000.0,\n",
+            "                                               'バナナ': 2400.0},\n",
+            "                   'total_purchase_amount': np.float64(11000.0)},\n",
+            " 'sales_kpis': {'daily_revenue': {datetime.date(2025, 7, 4): 924.0,\n",
+            "                                  datetime.date(2025, 7, 5): 462.0},\n",
+            "                'member_sales': np.float64(1056.0),\n",
+            "                'total_revenue': np.float64(1386.0)}}\n",
+            "データ分析を完了しました。\n"
+          ]
+        }
+      ],
       "source": [
         "results = {\n",
         "    \"sales_kpis\": sales_kpis,\n",
@@ -239,7 +294,7 @@
         "}\n",
         "\n",
         "print(\"\\n--- 分析結果 ---\")\n",
-        "print(json.dumps(results, indent=4, ensure_ascii=False))\n",
+        "pprint(results)\n",
         "print(\"データ分析を完了しました。\")"
       ]
     }
@@ -249,11 +304,13 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.13.2"
     }
   },
   "nbformat": 4,
