--- a/KPI.ipynb
+++ b/KPI.ipynb
@@ -9,10 +9,7 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import datetime\n",
-        "import logging\n",
-        "import argparse\n",
-        "import json\n",
+        "from datetime import datetime\n",
         "from pprint import pprint"
       ]
     },
@@ -49,8 +46,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "start_date = pd.to_datetime(start_date_str).date() if start_date_str else None\n",
-        "end_date = pd.to_datetime(end_date_str).date() if end_date_str else None"
+        "start_date = datetime.strptime(start_date_str, \"%Y-%m-%d\").date() if start_date_str else None\n",
+        "end_date = datetime.strptime(end_date_str, \"%Y-%m-%d\").date() if end_date_str else None"
       ]
     },
     {
@@ -118,32 +115,35 @@
       },
       "outputs": [],
       "source": [
-        "sales_kpis = {}\n",
-        "if sales_df is not None and not sales_df.empty:\n",
-        "    print(\"売上KPIを算出します。\")\n",
-        "    df_sales = sales_df.copy()\n",
+        "try:\n",
+        "    if sales_df is not None and not sales_df.empty:\n",
+        "        print(\"売上KPIを算出します。\")\n",
+        "        df_sales = sales_df.copy()\n",
         "\n",
-        "    if 'sales_date' in df_sales.columns:\n",
-        "        df_sales['sales_date'] = pd.to_datetime(df_sales['sales_date']).dt.date\n",
-        "        if start_date:\n",
-        "            df_sales = df_sales[df_sales['sales_date'] >= start_date]\n",
-        "        if end_date:\n",
-        "            df_sales = df_sales[df_sales['sales_date'] <= end_date]\n",
+        "        if 'sales_date' in df_sales.columns:\n",
+        "            df_sales['sales_date'] = pd.to_datetime(df_sales['sales_date']).dt.date\n",
+        "            if start_date:\n",
+        "                df_sales = df_sales[df_sales['sales_date'] >= start_date]\n",
+        "            if end_date:\n",
+        "                df_sales = df_sales[df_sales['sales_date'] <= end_date]\n",
         "\n",
-        "        total_revenue = df_sales['total_amount'].sum()\n",
-        "        daily_revenue = df_sales.groupby('sales_date')['total_amount'].sum().to_dict()\n",
+        "            total_revenue = df_sales['total_amount'].sum()\n",
+        "            daily_revenue = df_sales.groupby('sales_date')['total_amount'].sum().to_dict()\n",
         "\n",
-        "        member_sales = df_sales[df_sales['customer_id'].notna()]['total_amount'].sum()\n",
+        "            member_sales = df_sales[df_sales['customer_id'].notna()]['total_amount'].sum()\n",
         "\n",
-        "        sales_kpis = {\n",
-        "            \"total_revenue\": total_revenue,\n",
-        "            \"daily_revenue\": daily_revenue,\n",
-        "            \"member_sales\": member_sales,\n",
-        "        }\n",
+        "            sales_kpis = {\n",
+        "                \"total_revenue\": total_revenue,\n",
+        "                \"daily_revenue\": daily_revenue,\n",
+        "                \"member_sales\": member_sales,\n",
+        "            }\n",
+        "        else:\n",
+        "            print(\"売上データに 'sales_date' 列が存在しません。\")\n",
         "    else:\n",
-        "        print(\"売上データに 'sales_date' 列が存在しません。\")\n",
-        "else:\n",
-        "    print(\"売上データが空です。売上KPIの算出をスキップします。\")"
+        "        print(\"売上データが空です。売上KPIの算出をスキップします。\")\n",
+        "except Exception as e:\n",
+        "    print(f\"エラー: 売上KPIの算出中に予期しないエラーが発生しました: {e}\")\n",
+        "    sales_kpis = {}"
       ]
     },
     {
@@ -163,25 +163,28 @@
       },
       "outputs": [],
       "source": [
-        "customer_kpis = {}\n",
-        "if customer_df is not None and not customer_df.empty and sales_df is not None and not sales_df.empty and 'customer_id' in sales_df.columns and 'sales_date' in sales_df.columns:\n",
-        "    print(\"顧客KPIを算出します。\")\n",
-        "    df_sales_customer = sales_df.copy()\n",
-        "    df_sales_customer['sales_date'] = pd.to_datetime(df_sales_customer['sales_date']).dt.date\n",
-        "    if start_date:\n",
-        "        df_sales_customer = df_sales_customer[df_sales_customer['sales_date'] >= start_date]\n",
-        "    if end_date:\n",
-        "        df_sales_customer = df_sales_customer[df_sales_customer['sales_date'] <= end_date]\n",
+        "try:\n",
+        "    if customer_df is not None and not customer_df.empty and sales_df is not None and not sales_df.empty and 'customer_id' in sales_df.columns and 'sales_date' in sales_df.columns:\n",
+        "        print(\"顧客KPIを算出します。\")\n",
+        "        df_sales_customer = sales_df.copy()\n",
+        "        df_sales_customer['sales_date'] = pd.to_datetime(df_sales_customer['sales_date']).dt.date\n",
+        "        if start_date:\n",
+        "            df_sales_customer = df_sales_customer[df_sales_customer['sales_date'] >= start_date]\n",
+        "        if end_date:\n",
+        "            df_sales_customer = df_sales_customer[df_sales_customer['sales_date'] <= end_date]\n",
         "\n",
-        "    repeat_customers = df_sales_customer.groupby('customer_id')['sales_date'].nunique()[df_sales_customer.groupby('customer_id')['sales_date'].nunique() > 1].count() if not df_sales_customer.empty else 0\n",
-        "    average_purchase_frequency = df_sales_customer.groupby('customer_id')['sales_date'].nunique().mean() if not df_sales_customer.empty and df_sales_customer['customer_id'].nunique() > 0 else 0\n",
+        "        repeat_customers = df_sales_customer.groupby('customer_id')['sales_date'].nunique()[df_sales_customer.groupby('customer_id')['sales_date'].nunique() > 1].count() if not df_sales_customer.empty else 0\n",
+        "        average_purchase_frequency = df_sales_customer.groupby('customer_id')['sales_date'].nunique().mean() if not df_sales_customer.empty and df_sales_customer['customer_id'].nunique() > 0 else 0\n",
         "\n",
-        "    customer_kpis = {\n",
-        "        \"repeat_customers\": repeat_customers,\n",
-        "        \"average_purchase_frequency\": average_purchase_frequency\n",
-        "    }\n",
-        "else:\n",
-        "    print(\"顧客データまたは売上データが不十分なため、顧客KPIの算出をスキップします。\")"
+        "        customer_kpis = {\n",
+        "            \"repeat_customers\": repeat_customers,\n",
+        "            \"average_purchase_frequency\": average_purchase_frequency\n",
+        "        }\n",
+        "    else:\n",
+        "        print(\"顧客データまたは売上データが不十分なため、顧客KPIの算出をスキップします。\")\n",
+        "except Exception as e:\n",
+        "    print(f\"エラー: 顧客KPIの算出中に予期しないエラーが発生しました: {e}\")\n",
+        "    customer_kpis = {}"
       ]
     },
     {
@@ -201,29 +204,32 @@
       },
       "outputs": [],
       "source": [
-        "purchase_kpis = {}\n",
-        "if purchase_df is not None and not purchase_df.empty:\n",
-        "    print(\"仕入れKPIを算出します。\")\n",
-        "    df_purchase = purchase_df.copy()\n",
+        "try:\n",
+        "    if purchase_df is not None and not purchase_df.empty:\n",
+        "        print(\"仕入れKPIを算出します。\")\n",
+        "        df_purchase = purchase_df.copy()\n",
         "\n",
-        "    if 'purchase_date' in df_purchase.columns:\n",
-        "        df_purchase['purchase_date'] = pd.to_datetime(df_purchase['purchase_date']).dt.date\n",
-        "        if start_date:\n",
-        "            df_purchase = df_purchase[df_purchase['purchase_date'] >= start_date]\n",
-        "        if end_date:\n",
-        "            df_purchase = df_purchase[df_purchase['purchase_date'] <= end_date]\n",
+        "        if 'purchase_date' in df_purchase.columns:\n",
+        "            df_purchase['purchase_date'] = pd.to_datetime(df_purchase['purchase_date']).dt.date\n",
+        "            if start_date:\n",
+        "                df_purchase = df_purchase[df_purchase['purchase_date'] >= start_date]\n",
+        "            if end_date:\n",
+        "                df_purchase = df_purchase[df_purchase['purchase_date'] <= end_date]\n",
         "\n",
-        "        total_purchase_amount = (df_purchase['quantity'] * df_purchase['unit_price']).sum()\n",
-        "        product_purchase_amount = df_purchase.groupby('item_name')[['quantity', 'unit_price']].apply(lambda x: (x['quantity'] * x['unit_price']).sum()).sort_values(ascending=False).to_dict()\n",
+        "            total_purchase_amount = (df_purchase['quantity'] * df_purchase['unit_price']).sum()\n",
+        "            product_purchase_amount = df_purchase.groupby('item_name')[['quantity', 'unit_price']].apply(lambda x: (x['quantity'] * x['unit_price']).sum()).to_dict()\n",
         "\n",
-        "        purchase_kpis = {\n",
-        "            \"total_purchase_amount\": total_purchase_amount,\n",
-        "            \"product_purchase_amount\": product_purchase_amount,\n",
-        "        }\n",
+        "            purchase_kpis = {\n",
+        "                \"total_purchase_amount\": total_purchase_amount,\n",
+        "                \"product_purchase_amount\": product_purchase_amount,\n",
+        "            }\n",
+        "        else:\n",
+        "            print(\"仕入れデータに 'purchase_date' 列が存在しません。\")\n",
         "    else:\n",
-        "        print(\"仕入れデータに 'purchase_date' 列が存在しません。\")\n",
-        "else:\n",
-        "    print(\"仕入れデータが空です。仕入れKPIの算出をスキップします。\")"
+        "        print(\"仕入れデータが空です。仕入れKPIの算出をスキップします。\")\n",
+        "except Exception as e:\n",
+        "    print(f\"エラー: 仕入れKPIの算出中に予期しないエラーが発生しました: {e}\")\n",
+        "    purchase_kpis = {}"
       ]
     },
     {
@@ -243,15 +249,17 @@
       },
       "outputs": [],
       "source": [
-        "results = {\n",
-        "    \"sales_kpis\": sales_kpis,\n",
-        "    \"customer_kpis\": customer_kpis,\n",
-        "    \"purchase_kpis\": purchase_kpis\n",
-        "}\n",
-        "\n",
-        "print(\"\\n--- 分析結果 ---\")\n",
-        "pprint(results)\n",
-        "print(\"データ分析を完了しました。\")"
+        "try:\n",
+        "    results = {\n",
+        "        \"sales_kpis\": sales_kpis,\n",
+        "        \"customer_kpis\": customer_kpis,\n",
+        "        \"purchase_kpis\": purchase_kpis\n",
+        "    }\n",
+        "    print(\"\\n--- 分析結果 ---\")\n",
+        "    pprint(results)\n",
+        "    print(\"データ分析を完了しました。\")\n",
+        "except Exception as e:\n",
+        "    print(f\"エラー: 分析結果の出力中に予期しないエラーが発生しました: {e}\")"
       ]
     }
   ],
