refactor: fix KPI.ipynb to match KPI.py

--- a/KPI.ipynb
+++ b/KPI.ipynb
@@ -1,6 +1,17 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# KPI.ipynb\n",
+        "飲食店の運営に関する会員顧客データ, 仕入れデータ, 売上データを読み込み, 指定された期間における主要なKPIを算出する\n",
+        "parameters:\n",
+        "- start_date_str (str (YYYY-MM-DD))\n",
+        "- end_date_str (str (YYYY-MM-DD))"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -288,15 +299,14 @@
         "\n",
         "    try:\n",
         "        print(\"仕入れKPIを算出します。\")\n",
-        "        df_purchase = purchase_df.copy()\n",
-        "        df_purchase = filter_by_date(df_purchase, \"purchase_date\", START_DATE, END_DATE)\n",
+        "        df_filtered = filter_by_date(purchase_df.copy(), \"purchase_date\", START_DATE, END_DATE)\n",
         "\n",
         "        # 総仕入れ金額を算出\n",
-        "        total_purchase_amount = int((df_purchase[\"quantity\"] * df_purchase[\"unit_price\"]).sum())\n",
+        "        total_purchase_amount = int((df_filtered[\"quantity\"] * df_filtered[\"unit_price\"]).sum())\n",
         "\n",
         "        # 商品別仕入れ金額を算出\n",
         "        product_purchase_amount = (\n",
-        "            df_purchase.groupby(\"item_name\")[[\"quantity\", \"unit_price\"]]\n",
+        "            df_filtered.groupby(\"item_name\")[[\"quantity\", \"unit_price\"]]\n",
         "            .apply(lambda x: (x[\"quantity\"] * x[\"unit_price\"]).sum())\n",
         "            .astype(int)\n",
         "            .to_dict()\n",
@@ -309,7 +319,7 @@
         "\n",
         "    except Exception as e:\n",
         "        print(f\"エラー: 仕入れKPIの算出中に予期しないエラーが発生しました: {e}\")\n",
-        "        return {}\n"
+        "        return {}"
       ]
     },
     {
@@ -414,8 +424,16 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.13.2"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.1"
     }
   },
   "nbformat": 4,
